Bug 367727 - Zoom effect missing
Summary: Zoom effect missing
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: git master
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-23 15:48 UTC by Christoph Feck
Modified: 2016-08-24 14:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2016-08-23 15:48:24 UTC
Since a recent update in master, the Zoom effect is no longer present in the list of effects, and pre-configured hot keys for it do no longer work.
Comment 1 Martin Flöser 2016-08-24 05:37:31 UTC
might it be that you are on llvmpipe?
Comment 2 Christoph Feck 2016-08-24 13:51:37 UTC
It also does not appear when using XRender, which it previously did.
Comment 3 Martin Flöser 2016-08-24 14:24:45 UTC
Git commit b78848ef3683913824f04d168c7881ffd8052801 by Martin Gräßlin.
Committed on 24/08/2016 at 14:24.
Pushed by graesslin into branch 'master'.

[effects] Add enum value for new TouchPoints effect

M  +1    -0    effects/effect_builtins.h

http://commits.kde.org/kwin/b78848ef3683913824f04d168c7881ffd8052801