[effects] Add enum value for new TouchPoints effect

BUG: 367727